# grove

./: .gitignore  .mise.toml  .oxlintrc.json  CLAUDE.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json  vitest.config.ts
apps/desktop/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/app/: App.tsx  router.tsx
apps/desktop/src/app/routes/: __root.tsx  index.tsx
apps/desktop/src/features/: index.ts
apps/desktop/src/features/folder-navigation/: index.ts
apps/desktop/src/features/folder-navigation/model/: folderPathChangeExecutor.test.ts  markdownEditor.ts  (+19 more)
apps/desktop/src/features/plugin-host/: index.ts
apps/desktop/src/shared/: index.ts  tokens.css  tokens.test.ts
apps/desktop/src/shared/api/: commands.test.ts  commands.ts  dialog.test.ts  dialog.ts
apps/desktop/src/shared/ui/: ShellCard.tsx
apps/mobile/: README.md  app.json  metro.config.js  package.json  tailwind.config.js  tsconfig.json
apps/mobile/app/: _layout.tsx  index.tsx
apps/mobile/app/workspace/: select.tsx
docs/: architecture-layers.md  grove-plugin-json-spec.md  note-app-mvp-plan.md  plugin-api-spec.md
docs/superpowers/plans/: 2026-04-22-workspace-setup-required.md
docs/superpowers/specs/: 2026-04-19-issue-75-desktop-contextual-actions-design.md  2026-04-20-desktop-library-notes-workspace-switcher-design.md
plugins/: README.md
(+6 files in other folders)
