[package]
name = "grove"
version = "0.1.0"
description = "Grove desktop application"
authors = ["Grove"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0.0", features = [] }
tokio = { version = "1", features = ["fs", "io-util", "rt"] }
